--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		<div id="app"></div>
 
 		<!-- built files will be auto injected -->
-		<script src="./js/main.js"></script>
+		<script src="./src/js/main.js"></script>
 	</body>
 </html>
