--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Vue Parcel</title>
+		<link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" />
+		<!-- Load required Bootstrap and BootstrapVue CSS -->
+		<link
+			type="text/css"
+			rel="stylesheet"
+			href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css"
+		/>
+		<link
+			type="text/css"
+			rel="stylesheet"
+			href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"
+		/>
+
+		<!-- Load polyfills to support older browsers -->
+		<script
+			src="//polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver"
+			crossorigin="anonymous"
+		></script>
+
+		<!-- Load Vue followed by BootstrapVue -->
+		<script src="//unpkg.com/vue@latest/dist/vue.min.js"></script>
+		<script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
+		<title>my-project</title>
 	</head>
 	<body>
 		<div id="app"></div>
 
 		<!-- built files will be auto injected -->
-		<script src="./src/js/main.js"></script>
+		<!-- <script src="src/index.js"></script> -->
 	</body>
 </html>
