[32] componente foro a la espera de consultas = calendario

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 			href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"
 		/>
 
+		<script src="https://unpkg.com/vuejs-paginate@latest"></script>
+
 		<!-- Load polyfills to support older browsers -->
 		<script
 			src="//polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver"
