--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
 			href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"
 		/>
 
+		<!-- import montserrat -->
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet" />
+
 		<!-- Load polyfills to support older browsers -->
 		<script
 			src="//polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver"
